logs/brisa-media-server.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/brisa_media_server'...
Listing './lib/python3.5/site-packages/brisa_media_server/assistant'...
Listing './lib/python3.5/site-packages/brisa_media_server/conf'...
Listing './lib/python3.5/site-packages/brisa_media_server/conf/gui'...
Listing './lib/python3.5/site-packages/brisa_media_server/conf/gui/gtk'...
Listing './lib/python3.5/site-packages/brisa_media_server/plugins'...
Listing './lib/python3.5/site-packages/brisa_media_server/plugins/media_library'...
Compiling './lib/python3.5/site-packages/brisa_media_server/plugins/media_library/facade.py'...
***   File "./lib/python3.5/site-packages/brisa_media_server/plugins/media_library/facade.py", line 51
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/brisa_media_server/services'...
Listing './lib/python3.5/site-packages/brisa_media_server/services/media_registrar_ms'...
Listing './lib/python3.5/site-packages/brisa_media_server/xml_descriptions'...
Listing './lib/python3.5/site-packages/brisa_media_server-0.1.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/applications'...
Listing './share/applications/hildon'...
Listing './share/dbus-1'...
Listing './share/dbus-1/services'...
Listing './share/python-wheels'...
